fixed font size on mobile

--- a/src/_shared/modules/_markdown.scss
+++ b/src/_shared/modules/_markdown.scss
@@ -30,7 +30,7 @@ $attr: "Markdown";
   p {
     @include extend("layout", "max720", "mb1");
     @include extend("type", "serif", "lh1.6", "small1");
-    .breakpoint-small {
+    .breakpoint-small & {
       @include extend("type", "small0");
     }
   }
